# ssl_licence

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: settings.py
licence/: __init__.py  generator.py  manager.py  validator.py
licence/generators/: __init__.py
licence/templates/: __init__.py  defaults.py
licence/validators/: __init__.py
scripts/: check_certs.py  daily_check.py  generate_cert.py  issue_licence.py
ssl/: __init__.py  certificate.py  monitor.py
ssl/utils/: __init__.py  helpers.py
sslcert/: __init__.py  acme_service.py  azure_dns.py  azure_resources.py  chain_validator.py  dns_discovery.py  monitor.py  ocsp_checker.py  zone_transfer.py
sslcert/utils/: __init__.py
tests/e2e/: conftest.py  test_alerts.py  test_analysis.py  test_api.py  test_certificates.py  test_dashboard.py  test_domains.py  test_flash_messages.py  test_form_validation.py  test_licences.py  test_navigation.py  test_products.py  test_reports.py  test_responsive.py  test_settings.py
tests/test_licence/: test_generator.py  test_validator.py
tests/test_ssl/: test_certificate.py
tests/test_sslcert/: test_azure_dns.py  test_certificate.py  test_chain_validator.py  test_ocsp_checker.py  test_zone_transfer.py
tests/test_tracker/: test_alert_engine.py  (+4 more)
tracker/: __init__.py  alert_engine.py  audit.py  domain.py  domain_registry.py  product.py  registry.py  reports.py  search.py  ssl_notifier.py  user.py
web/: __init__.py  app.py  auth.py  scheduler.py  services.py  settings_store.py  sort_utils.py
(+58 files in other folders)
