[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ssl-licence"
version = "0.1.0"
description = "SSL certificate and software licence management tool"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
ssl-licence = "main:main"

[tool.setuptools.packages.find]
include = ["ssl*", "licence*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
